--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <h2>AIM</h2>
                     <!-- aim paragraph  -->
                     <p>
-                        The ‘Aims’ of the NCC laid out in 1988 have stood the test 
+                        The ‘Aims’ of the NCC laid out in <strong>1988</strong> stood the test 
                         of time and continue to meet the requirements expected of
                          it in the current socio–economic scenario of the country.
                     </p>
